{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 106,
  "lineage": "0842ee2d-975a-cadb-8859-257517a88c6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bia-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3f602d23f1659d",
            "arn": "arn:aws:ec2:us-east-1:905418032726:instance/i-00ca12d288f1d4392",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-acesso-ssm",
            "id": "i-00ca12d288f1d4392",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0611c3f78383aba03",
            "private_dns": "ip-172-31-90-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.90.249",
            "public_dns": "ec2-44-203-50-182.compute-1.amazonaws.com",
            "public_ip": "44.203.50.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-065207f4bd3bcc5ed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "bia-dev-tf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099373bca3b130685",
            "tags": {
              "Name": "bia-dev-tf",
              "ambiente": "dev"
            },
            "tags_all": {
              "Name": "bia-dev-tf",
              "ambiente": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088c92a5d9ef173a5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role_acesso_ssm",
            "aws_iam_role.role_acesso_ssm",
            "aws_security_group.bia_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bia_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418032726:security-group/sg-088c92a5d9ef173a5",
            "description": "Regra para a instancia de trabalho bia-dev com terraform",
            "egress": [],
            "id": "sg-088c92a5d9ef173a5",
            "ingress": [],
            "name": "bia-dev-tf",
            "name_prefix": "",
            "owner_id": "905418032726",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0938e8a27ed995c31"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418032726:security-group-rule/sgr-079fd04a50ebad204",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-079fd04a50ebad204",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-088c92a5d9ef173a5",
            "security_group_rule_id": "sgr-079fd04a50ebad204",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bia_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418032726:security-group-rule/sgr-0776dcf34b152165d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3001,
            "id": "sgr-0776dcf34b152165d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-088c92a5d9ef173a5",
            "security_group_rule_id": "sgr-0776dcf34b152165d",
            "tags": null,
            "tags_all": {},
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bia_dev"
          ]
        }
      ]
    }
  ]
}